<resources>
    <string name="app_name">Nutrition Analysis</string>
    <string name="about_app">Enter an ingredient list for what you are cooking, like <font color='#99E6FC'>( 1 cup rice, 10 oz chickpeas)</font>, etc. Enter each ingredient on a new line.</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="nutrition_analysis">Nutrition Analysis</string>
    <string name="analysis"> Analysis </string>
    <string name="new_recipe">New Recipe</string>
    <string name="ingredient_details">Ingredient Details</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="amount_per_serving">Amount Per Serving</string>
    <string name="p_value">% Value</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="total_fat">Total Fat:</string>
    <string name="saturated_fat">Saturated Fat:</string>
    <string name="trans_fat">Trans Fat:</string>
    <string name="cholesterol">Cholesterol:</string>
    <string name="sodium">Sodium:</string>
    <string name="total_carbohydrate">Total Carbohydrate:</string>
    <string name="dietary_fiber">Dietary Fiber:</string>
    <string name="total_sugars">Total Sugars</string>
    <string name="includes">Includes:</string>
    <string name="protein">Protein:</string>
    <string name="vitamin">VitaminD:</string>
    <string name="calcium">Calcium:</string>
    <string name="iron">Iron:</string>
    <string name="potassium">Potassium:</string>
    <string name="percent_daily_values_are_based_on_a_2000_calorie_diet">*Percent Daily Values are based on a 2000 calorie diet</string>
    <string name="no_value">-</string>
    <string name="_1_cup_rice_10_oz_chickpeas">1 cup rice,\n10 oz chickpeas</string>
</resources>